--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,26 @@
-
 <mat-drawer-container class="mat-drawer-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
+  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+    <div class="logo-container">
+      PLATZ FÜR LOGO
+    </div>
+
+    <ul class="menu-items">
+      <li routerLink="/"><mat-icon>fact_check</mat-icon> Dashboard</li>
+      <li routerLink="/user"><mat-icon>person</mat-icon> User</li>
+    </ul>
   </mat-drawer>
 
   <div class="example-sidenav-content">
     <p>
       <mat-toolbar color="primary">
         <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-        
+
         <span>Simple CRM</span>
       </mat-toolbar>
     </p>
-   
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
 </mat-drawer-container>
