--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,43 @@
 .menu-icon {
     cursor: pointer;
 }
+
+.sidenav {
+    width: 300px;
+}
+
+.logo-container {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+    padding: 0px 16px 0px 16px;
+    min-height: 56px;
+    display: flex;
+    align-items: center;
+}
+
+mat-toolbar {
+    min-height: 56px;
+    height: 56px;
+}
+
+.menu-items {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        padding: 0px 16px 0px 16px;
+        height: 48px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        gap: 16px;
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.04);
+        }
+    }
+}
+
+.router-container {
+    padding: 16px 56px;
+}
