--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,26 @@
-<p>user works!</p>
+<mat-card>
+  <mat-card-content>
+    <table class="user-table">
+      <tr>
+        <th>Name</th>
+        <th>E-Mail</th>
+        <th>City</th>
+      </tr>
+      <tr *ngFor="let user of allUsers" [routerLink]="['/user/' + user.id]">
+        <td>{{ user.firstName }} {{ user.lastName }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.city }}</td>
+      </tr>
+
+
+    </table>
+  </mat-card-content>
+</mat-card>
 
 
 
 
-<button (click)="openDialog()" class="add-user-btn" matTooltip="Add user" matTooltipPosition="above" mat-fab color="primary">
-    <mat-icon>add</mat-icon>
-  </button>
+<button (click)="openDialog()" class="add-user-btn" matTooltip="Add user" matTooltipPosition="above" mat-fab
+  color="primary">
+  <mat-icon>add</mat-icon>
+</button>
