Added edit functions

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,3 +45,9 @@ mat-toolbar {
 .router-container {
     padding: 16px 56px;
 }
+
+.example-sidenav-content {
+    span {
+        margin-left: 15px;
+    }
+}
